# trino-teradata-connector

./: README.md
config/: jvm.config  teradata-export.properties
docs/: IMPLEMENTATION_NOTES.md  SESSION_SUMMARY.md  TECHNICAL_GUIDE_TDEXPORT.md
scripts/: ExportToTrino.java  build_all.sh  build_teradata.sh  build_trino.sh  deploy.sql  deploy_to_trino.sh  export_to_trino_backup.c  export_to_trino_full.cpp  export_to_trino_socket.c  export_to_trino_v3.c  export_to_trino_v4.c  export_to_trino_v5.c  export_to_trino_v6.c  export_to_trino_v7.c  register.bteq  register_py.py  register_socket.bteq  register_udf.py  sync_to_opensource.sh  teradata_export.c  teradata_export.cpp  test_e2e.sh  test_table_operator.sh  verify_cpp.sh
src/teradata/: CMakeLists.txt  TeradataMemoryPool.h  export_to_trino.c  requirements.txt
src/teradata/include/: sqltypes_td.h
src/trino/: pom.xml
tests/: TEST_RESULTS.md  TrinoConnectorTests.java  get_password.sh  get_token.sh  quick_test.sh  run_all_tests.sh  run_connector_tests.sh  run_java_suite.sh  run_java_tests.sh  setup_dynamic_filter_test.bteq  setup_test_tables.bteq  setup_unicode.bteq  stress_test.sh  stress_test_java.sh  test_concurrency.sh  test_suite.sh
tests/config/: teradata-export.properties
tests/docs/: SESSION_SUMMARY.md  TECHNICAL_GUIDE_TDEXPORT.md
tests/scripts/: deploy_to_trino.sh
tests/stress/: pom.xml  run_stress_test.sh
tests/suites/: test_character_types.sh  test_common.sh  test_datetime_types.sh  test_decimal_types.sh  test_edge_cases.sh  test_integer_types.sh  test_null_handling.sh
tests/trino-tests/: pom.xml
(+61 files in other folders)
